# duck_db_udemy

./: .gitignore  .gitmodules  Querys.sql
2.installation&demo/: results_2023.csv  results_2023.parquet
3.cli_usage/: chinook.db  readme.md
7.motherduck/: README.md  results_2023.csv
8.fastapi/: .$fastapi_duckdb.drawio.bkp  Dockerfile  README.md  fastapi_duckdb.drawio  license  pipeline.yaml  pyproject.toml
8.fastapi/movie_rec_system/app/: recommenderhelper.py
8.fastapi/movie_rec_system/etl/: eda.ipynb  eda_old.ipynb  extract.py
8.fastapi/movie_rec_system/products/: .eda-pipeline.ipynb.metadata  .extract-pipeline.ipynb.metadata  eda-pipeline.ipynb  extract-pipeline.ipynb
