[tool.poetry]
name = "movie-rec-system"
version = "0.1.0"
description = ""
authors = ["auth1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "0.8.1"
requests = "^2.31"
pandas="^2.2"
numpy="1.26.4"
matplotlib = "^3.9"
python-dotenv="1.0.0"
ploomber = "0.22.4"
jupysql = "0.10.1"
duckdb-engine = "0.9.2"
fastapi = "^0.103.0"
pytest = "7.4.0"
uvicorn = "0.23.2"
httpx = "^0.24.1"
ipython = "^8.20"
scikit-learn = "^1.5.0"
scipy = "^1.14.0"
pydantic = "^2.9"  # Newer has Python 3.13 wheels
pillow = "^10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
